# http-macros

./: Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
src/: lib.rs  parser.rs  request.rs  request_builder.rs  token_helpers.rs
tests/: request.rs  request_builder.rs
tests/ui/request/: empty.rs  empty.stderr  malformed.rs  malformed.stderr  non-utf8-body.rs  non-utf8-body.stderr
tests/ui/request_builder/: body.rs  body.stderr  empty.rs  empty.stderr
