[package]
name = "http-macros"
version = "0.1.0"
edition = "2021"
description = "Macros to easily create HTTP requests for tests"
license = "MIT"
repository = "https://github.com/chesedo/http-macros"
documentation = "https://docs.rs/http-macros"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1.0.4", default-features = false }
proc-macro2 = "1.0.85"
quote = "1.0.36"

[dev-dependencies]
http = "1.1.0"
trybuild = "1.0.96"
